--- a/css/styles.css
+++ b/css/styles.css
@@ -116,10 +116,11 @@ h1,h2,h3,h4,h5,h6 {
     line-height: 1.5;
     letter-spacing: 0.02em;
     display: block;
-
+    position: relative;
     text-decoration:none;
-    color: #2e2f42; 
+    color: #404bbf; 
     padding: 24px 0; 
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
@@ -143,11 +144,12 @@ h1,h2,h3,h4,h5,h6 {
     width: 100%;
     height: 4px;
     left: 0;
-    bottom: 0;
+    bottom: -1px;
     display: block;
     background-color: #404BBF;
     border-radius: 2px;
     transition: var(--curent-color);
+    position: absolute;
     
 }
 
@@ -184,6 +186,7 @@ h1,h2,h3,h4,h5,h6 {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    transition:  color 250ms cubic-bezier(0.4, 0, 0.2,1);
  
     color:#434455;
     
