--- a/css/styles.css
+++ b/css/styles.css
@@ -275,6 +275,7 @@ h1,h2,h3,h4,h5,h6 {
 
     border-radius: 4px;
     cursor: pointer;
+    transition:250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .intro-btn:hover {
@@ -570,7 +571,7 @@ h1,h2,h3,h4,h5,h6 {
     display: flex; 
     align-items: center;
     justify-content: center;
-    
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
@@ -647,7 +648,7 @@ h1,h2,h3,h4,h5,h6 {
     justify-content: center;
     color: #8e8f99;
     cursor: pointer;
-    
+    transition:250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .service-link:hover,
@@ -773,6 +774,7 @@ h1,h2,h3,h4,h5,h6 {
     align-items: center;
     justify-content: center;
     cursor: pointer;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-link:hover{
@@ -835,7 +837,11 @@ h1,h2,h3,h4,h5,h6 {
 
     padding: 12px 24px;
     border: 1px solid #e7e9fc; 
-    border-radius: 4px;;
+    border-radius: 4px;
+    transition:color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+     border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1); 
   
 }
 
