--- a/css/styles.css
+++ b/css/styles.css
@@ -275,7 +275,7 @@ h1,h2,h3,h4,h5,h6 {
 
     border-radius: 4px;
     cursor: pointer;
-    transition:250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition:background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .intro-btn:hover {
@@ -571,7 +571,7 @@ h1,h2,h3,h4,h5,h6 {
     display: flex; 
     align-items: center;
     justify-content: center;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition:background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
@@ -648,7 +648,7 @@ h1,h2,h3,h4,h5,h6 {
     justify-content: center;
     color: #8e8f99;
     cursor: pointer;
-    transition:250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition:border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .service-link:hover,
@@ -774,7 +774,7 @@ h1,h2,h3,h4,h5,h6 {
     align-items: center;
     justify-content: center;
     cursor: pointer;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition:background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-link:hover{
@@ -933,12 +933,14 @@ border-radius: 4px;
 
 .deep-subject-link {
     display: block;
+    transition:box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
 
 }
 
 .deep-subject-link:hover{
     box-shadow:  0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+    transform: transform: translateY(0%);
 }
 
 .deep-subject-link:focus{
