--- a/css/styles.css
+++ b/css/styles.css
@@ -939,7 +939,7 @@ border-radius: 4px;
 }
 
 .deep-subject-link:hover{
-    
+    box-shadow:  0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
     transform: translateY(0%);
 }
 
