--- a/css/styles.css
+++ b/css/styles.css
@@ -118,7 +118,7 @@ h1,h2,h3,h4,h5,h6 {
     display: block;
     position: relative;
     text-decoration:none;
-    color: #404bbf; 
+    color: #2E2F42; 
     padding: 24px 0; 
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
@@ -134,7 +134,7 @@ h1,h2,h3,h4,h5,h6 {
     color: #404bbf;
 }
 
-.header-list-item-link:focus {
+.header-list-item-link:focus  {
     
     color: #404bbf;
 }
@@ -938,36 +938,38 @@ border-radius: 4px;
 
 }
 
-.deep-subject-link:hover{
+.deep-subject-link:hover .deep-subject-cover-text{
     box-shadow:  0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
     transform: translateY(0%);
 }
 
-.deep-subject-link:focus{
+.deep-subject-link:focus .deep-subject-cover-text{
     box-shadow:  0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-    transform: translateY(0%)
+    transform: translateY(0%);
 }
 
 .deep-cover-wrap {
-
-    position: relative; 
-    overflow: hidden;
+  position: relative;
+  overflow: hidden;
+    
 }
 
 .deep-subject-cover-text{
-  position: absolute;
-  top: 0;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #f4f4fd;
-  padding: 40px 32px;
-  background-color: #4d5ae5;
-  height: 100%;
-  width: 100%;
-  transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+   position: absolute;
+   top: 0;
+   color: #f4f4fd;
+   font-size: 16px;
+   line-height: 1.5;
+   letter-spacing: 0.02em;
+   padding: 40px 32px;
+   background-color: #4d5ae5;
+   height: 100%;
+   width: 100%; 
+   transform: translateY(100%);
+   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
+
 
 
 .deep-container {
@@ -977,6 +979,10 @@ border-radius: 4px;
     border-top: none;
 
 }
+
+
+
+
 
 
 .backdrop {
