--- a/css/styles.css
+++ b/css/styles.css
@@ -121,7 +121,6 @@ h1,h2,h3,h4,h5,h6 {
     color: #2E2F42; 
     padding: 24px 0; 
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
 }
 
 .link {
@@ -132,6 +131,8 @@ h1,h2,h3,h4,h5,h6 {
 .header-list-item-link:hover {
 
     color: #404bbf;
+    
+    
 }
 
 .header-list-item-link:focus  {
@@ -139,7 +140,7 @@ h1,h2,h3,h4,h5,h6 {
     color: #404bbf;
 }
 
-.header-list-item-link::after{
+.header-list-item-link::after {
     content: "";
     width: 100%;
     height: 4px;
@@ -150,15 +151,24 @@ h1,h2,h3,h4,h5,h6 {
     border-radius: 2px;
     transition: var(--curent-color);
     position: absolute;
+    transform: scaleX(0);
+    opacity: 0;
+    transition-duration: 250ms;
+    transition-property: transform;
     
 }
 
-
-.header-list-item-link:hover:after {
-    background-color:#404BBF;
-    transform: scaleX(1) ;
+.header-list-item-link:hover:after,
+.header-list-item-link:focus:after,
+.current.header-list-item-link:after {
+ transform: scaleX(1);
+ opacity: 1;
+}
+ 
+.current.header-list-item-link {
+    color: #404bbf;
+    opacity: 1;
   }
-  
 
 
 .header-address {
@@ -276,6 +286,7 @@ h1,h2,h3,h4,h5,h6 {
     border-radius: 4px;
     cursor: pointer;
     transition:background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .intro-btn:hover {
@@ -938,6 +949,7 @@ border-radius: 4px;
 
 }
 
+
 .deep-subject-link:hover .deep-subject-cover-text{
     box-shadow:  0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
     transform: translateY(0%);
@@ -946,6 +958,11 @@ border-radius: 4px;
 .deep-subject-link:focus .deep-subject-cover-text{
     box-shadow:  0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
     transform: translateY(0%);
+}
+
+.deep-subject-link:hover,
+.deep-subject-link:focus {
+    box-shadow:  0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .deep-cover-wrap {
@@ -967,6 +984,8 @@ border-radius: 4px;
    width: 100%; 
    transform: translateY(100%);
    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   transition-duration: 300ms;
+   transition-timing-function: linear;
 
 }
 
@@ -981,6 +1000,9 @@ border-radius: 4px;
 }
 
 
+
+
+/**-------------MODAL-----------*/
 
 
 
@@ -1030,12 +1052,14 @@ border-radius: 4px;
     padding: 0;
     cursor: pointer;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 300ms;
 }
 
 .modal-close:hover{
     background-color: #404bbf;
     border: none;
     fill: #ffffff;
+   
 }
 
 
