--- a/css/styles.css
+++ b/css/styles.css
@@ -945,6 +945,7 @@ border-radius: 4px;
 .deep-subject-link {
     display: block;
     transition:box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 300ms;
     
 
 }
