--- a/css/styles.css
+++ b/css/styles.css
@@ -945,7 +945,7 @@ border-radius: 4px;
 
 .deep-subject-link {
     display: block;
-    transition:box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transition-duration: 300ms;
     
 
@@ -965,6 +965,7 @@ border-radius: 4px;
 .deep-subject-link:hover,
 .deep-subject-link:focus {
     box-shadow:  0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+    transform: translateY(0%)
 }
 
 .deep-cover-wrap {
