--- a/css/styles.css
+++ b/css/styles.css
@@ -945,8 +945,8 @@ border-radius: 4px;
 
 .deep-subject-link {
     display: block;
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transition-duration: 300ms;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
 
 }
@@ -959,7 +959,7 @@ border-radius: 4px;
 
 .deep-subject-link:focus .deep-subject-cover-text{
     box-shadow:  0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-    transform: translateY(0%);
+    transform: translateY(0%)
 }
 
 .deep-subject-link:hover,
@@ -986,9 +986,9 @@ border-radius: 4px;
    height: 100%;
    width: 100%; 
    transform: translateY(100%);
-   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
    transition-duration: 300ms;
    transition-timing-function: linear;
+   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
@@ -1054,8 +1054,8 @@ border-radius: 4px;
     border: 1px solid rgba(0, 0, 0, 0.1);
     padding: 0;
     cursor: pointer;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transition-duration: 300ms;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
 .modal-close:hover{
